Dark Mode issues and some other layout issues

--- a/assets-cppri/css/site.css
+++ b/assets-cppri/css/site.css
@@ -4929,8 +4929,9 @@ img.cell-icon-sec {
 
   .list-start
   {
-	display: flex;
+	/* display: flex; */
 	align-items: start;
+	width: 100%;
   }
 
   .sub-nav-group li:hover
