--- a/assets-cppri/theme/css/site.css
+++ b/assets-cppri/theme/css/site.css
@@ -3374,7 +3374,7 @@ marquee.news-marquee a {
 
 
 .banner-box p {
-	font-size: 115%;
+	font-size: 115% !important;
    
     padding-left: 5px;
     /* color: #fff; */
@@ -5164,8 +5164,9 @@ img.cell-icon-sec {
 
   .list-start 
   {
-	display: flex;
+	/* display: flex; */
 	align-items: start;
+	width: 100%;
   }
 
   .sub-nav-group li:hover 
@@ -5861,10 +5862,16 @@ table.dataTable tbody td {
     line-height: 26px !important;
 }
 
+label.security-code {
+	width: 35%;
+}
+span.equalto {
+	width: 5% !important;
+}
 
-
-
-
+.SecurityCode {
+	width: 60% !important;
+}
 
 
 .employee-directry-type.employee-dir-page h2 {
